website/static/css/custom.css
/*Root*/

@media (max-width: 375px) {
  .logo {
    display: flex;
  }
}

/* CSS for sidebars dropdown in mobile view */

@media only screen and (max-width: 735px){
ul#languages-dropdown-items {
    display: block;
    background-color: #ffffff;
}
}

@media only screen
and (min-device-width : 320px)
and (max-device-width : 375px) {
    .reactNavSearchWrapper input#search_input_react {
        width:181px;
   }
}

body{
  font-size: 16px;
}

.mainContainer {
  font-size: 15px;
}

/* Navigation header bg color */
.fixedHeaderContainer {
    background: #282828;
}

/* Content headers */
.container .wrapper h1 {
    color: #282828;
}
.container .wrapper h2 {
    color: #282828;
}
.container .wrapper h3 {
    color: #282828;
}
.container .wrapper h4 {
    color: #282828;
}
.mainContainer .wrapper .post .postHeader h1 {
    font-size: 220%;
    padding: 0 0 30;
}
.mainContainer .wrapper .post h1, .mainContainer .wrapper .post h2 {
    font-weight: 400;
}
.mainContainer .wrapper .post h3, .mainContainer .wrapper .post h3 {
    font-weight: 400;
}

/* Body */	
body {
    color : #282828;
    background: #fff;
}
h1, h2, h3, h4 {
    color: #282828;
}
.mainContainer .wrapper .post h2 {
    font-size: 190%;
}
.mainContainer .wrapper .post h3 {
    font-size: 155%;
}
.mainContainer .wrapper .post h4 {
    font-size: 120%;
}
/* Css for image size */
img {
  max-width: max-content;
  height: auto;
}

/* CSS for footer */
footer.nav-footer {
    background: #1b1b1b;
}

footer .sitemap .nav-home {
  display: table;
  margin: -12px 20px 0 0;
  padding: 10px;
  width: 50px;
  height: 50px;
  opacity: initial;
  transition: initial;
}

/* NAV bar */

.fixedHeaderContainer header img#logo {
    height: 100%;
    margin-right: 10px;
}
.fixedHeaderContainer header img {
    height: 60%;
    margin-right: 10px;
}

.fixedHeaderContainer header h2 {
    color:#f1584d;
}

.headerTitle {
    color: #f3f3f3;
    font-weight: 200;
}

.navigationSlider .slidingNav ul li a {
    color: #fff;
}

.navigationSlider .slidingNav ul li a:focus,
.navigationSlider .slidingNav ul li a:hover {
    background: #f1584d;
}

/* Side bar*/
nav.toc .toggleNav {
    background: #f5f7fa;
    padding: 3%;
}

nav.toc .toggleNav ul li a {
    color: #282828;
    font-size: 14px;
    padding-left: 10px;
}
nav.toc .toggleNav .navGroup h3 {
    font-weight: 600;
    font-size: 20px;
}
nav.toc .toggleNav ul li.navListItemActive {
    background: #f1584d;
    color: #f5f7fa;
}
nav.toc .toggleNav ul li a.navItemActive{
    color: #f5f7fa;    
}
nav.toc .toggleNav .navGroup.navGroupActive h3 {
    background:#f5f7fa;
    color:#f1584d;
    font-size: 15px;
    text-transform: uppercase;
}

nav.toc .toggleNav .navGroup.navGroupActive {
    background: #f5f7fa;
    padding: '20px 0';
}

/* Right side menu */
nav.onPageNav > ul.toc-headings > li > a {
    font-weight: bold;
}

/*Doc body*/
.mainContainer {
    background: #fff;
}


/*Layouts*/
.row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
}

.col-md-3 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
}

.mb-2,
.my-2 {
    margin-bottom: 0.5rem !important;
}

pre code {
    border-color: #F0F0F0;
}

@media (max-width: 375px) {

    .fixedHeaderContainer header img {
        width: 108px;
        height: auto;
    }
    .fixedHeaderContainer header h2{
        color: #fff;
    }

}

@media (max-width: 376px) and (min-width: 576px) {

    .fixedHeaderContainer header img {
        width: 141px;
        height: auto;
    }
    .fixedHeaderContainer header h2{
        color: #fff;
    }

}

/* css for tables */
table tr th {
    background: #f2f2f2;
    font-weight: bold;
    text-transform: uppercase;
}

/* css for code snippets */
.hljs, .hljs-subst {
    color: #000;
}
.hljs-built_in, .hljs-bullet, .hljs-code, .hljs-addition {
    color: #000;
}
.hljs-type, .hljs-meta, .hljs-string, .hljs-number, .hljs-selector-id, .hljs-selector-class, .hljs-quote, .hljs-template-tag, .hljs-deletion {
    color: #000;
}
.hljs-regexp, .hljs-symbol, .hljs-variable, .hljs-template-variable, .hljs-link, .hljs-selector-attr, .hljs-selector-pseudo {
    color: #000;
}

.hljs {
    display: block;
    overflow-x: auto;
    padding: 0.5em;
}

/* CSS for search bar */
input#search_input_react 
{
  background-color: #ffffff;
  font-weight:400;
  height:35;
}
input#search_input_react:focus, input#search_input_react:active {
    color: #555;
}

#panel, .flip {
    cursor: pointer;
}

/* CSS for version dropdown */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 720px) {
    element.style {
      position: relative;
    }

    .ver-link {
      cursor: pointer;
      color: #fff;
      margin-right: 150px;
      margin-top: 10px;
    }

    p {
      line-height: 1;
      font-size: 12px;
    }
}

/**
 * Styles for the Swagger API documentation (engine/api/v1.x/index.html)
 */


/* ReDoc doesn't change outer page styles */
.redoc-body{
    margin: 0px;
}
/**
 * Disable request-type badges, see https://github.com/Rebilly/ReDoc/issues/61
 */
redoc .operation-type {
    display: none !important;
}

